--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -18,13 +18,13 @@
 
     <ion-item>
       <ion-avatar item-start>
-        <img src="img/marty-avatar.png">
+        <img src="assets/imgs/marty-avatar.png">
       </ion-avatar>
-      <h2>Raymison Maklouf</h2>
+      <h2 class="feed_title">{{ nomeUsu }}</h2>
       <p>05 de janeiro de 1964</p>
     </ion-item>
 
-    <img src="img/advance-card-bttf.png">
+    <img src="assets/imgs/advance-card-bttf.png">
 
     <ion-card-content>
       <p>Aplicativo para compras compartilhadas em que você usuário pode achar alguém para dividir a conta</p>
