--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -14,6 +14,9 @@
 
 
 <ion-content padding>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <!-- *ngFor é uma diretiva estrutural-->
   <ion-card *ngFor="let filme of lista_filmes">
 
@@ -46,10 +49,13 @@
       </ion-col>
       <ion-col center text-center>
         <ion-note>
-            {{ objetoFeed.timeComents }}
+          {{ objetoFeed.timeComents }}
         </ion-note>
       </ion-col>
     </ion-row>
 
   </ion-card>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
