--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,6 +6,8 @@
 
 <ion-content padding>
   <h3>Bem vindo ao App do Raymison!</h3>
+  <img *ngIf="img" [src]="img" alt="">
+  <button ion-button block (click)="tirarFoto()">Tirar Foto</button>
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
